# forge-loop-cli

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: analyze.rs  doctor.rs  main.rs  sdd.rs
crates/forge-cli/tests/: analyze_integration.rs  contract_cli.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: lib.rs
crates/forge-config/tests/: config_precedence.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: circuit_breaker.rs  io.rs  lib.rs  prompt.rs  rate_limiter.rs  status.rs
crates/forge-core/tests/: acceptance_run.rs
crates/forge-engine/: Cargo.toml
crates/forge-engine/src/: lib.rs  output_parser.rs
crates/forge-monitor/: Cargo.toml
crates/forge-monitor/src/: lib.rs
crates/forge-types/: Cargo.toml
crates/forge-types/src/: lib.rs
docs/specs/monitor/: acceptance.md  scenarios.md  spec.md
docs/specs/run/: acceptance.md  scenarios.md  spec.md
docs/specs/status/: acceptance.md  scenarios.md  spec.md
