[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
ratatui = "0.29"
crossterm = "0.28"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
