[package]
name = "forge-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
forge-config = { path = "../forge-config" }
forge-types = { path = "../forge-types" }
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
