[package]
name = "forge-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
forge-core = { path = "../forge-core" }
forge-types = { path = "../forge-types" }
serde_json.workspace = true
libc.workspace = true
chrono.workspace = true
